--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web Crawler Project",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "node --no-warnings main.js",
     "test": "jest"
   },
   "repository": {
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/andrefbarros/web-crawler#readme",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "jsdom": "^22.1.0"
   }
 }
